[workspace]
members = [
  "src/base",
  "src/engine",
  "src/engine/shared",
  "src/rust-bridge/test",
]

resolver = "2"

[workspace.dependencies]
# After updating the cxx version, you need to run
# `python scripts/generate_rust_bridge.py`.
cxx = "=1.0.194"

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
panic = "abort"

[profile.relwithdebinfo]
inherits = "release"
debug = true
