[package]
name = "ddnet-engine"
version = "0.0.1"
edition = "2021"
publish = false
license = "Zlib"

[lib]
path = "lib.rs"

[dependencies]
ddnet-base = { path = "../base" }

cxx = "1.0"

[dev-dependencies]
ddnet-engine-shared = { path = "shared" }
ddnet-test = { path = "../rust-bridge/test", features = ["link-test-libraries"] }
