[package]
name = "ddnet-engine"
version = "0.0.1"
edition = "2021"
rust-version = "1.85"
publish = false
license = "Zlib"

[lib]
path = "lib.rs"

[dependencies]
ddnet-base = { path = "../base" }

cxx = { workspace = true }

[dev-dependencies]
ddnet-engine-shared = { path = "shared" }
ddnet-test = { path = "../rust-bridge/test", features = ["link-test-libraries"] }
