[package]
name = "masterping"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
edition = "2021"
publish = false
license = "Zlib"

[workspace]

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
clap = { version = "2.34.0", default-features = false, features = [
  "suggestions",
  "wrap_help",
] }
ureq = "2.5.0"
uuid = { version = "1.2.2", features = ["v4"] }
